# Screen-Translate

./: .gitignore  MODEL_DOWNLOAD.md  README.md  arch.md  detailed_architecture.md  pyproject.toml
src/screen_translate/: __init__.py  app.py
src/screen_translate/config/: __init__.py  manager.py  schemas.py
src/screen_translate/core/: __init__.py  audio_processor.py  cache.py  controller.py  engine.py  ocr_processor.py  screen_capture.py  translator.py  whisper_processor.py
src/screen_translate/download_models/: __init__.py  __main__.py
src/screen_translate/infra/: __init__.py  logging.py
src/screen_translate/ui/: __init__.py  display_overlay.py  main_window.py  region_selector.py  settings_dialog.py
tests/: conftest.py  test_cache.py  test_config.py  test_engine.py  test_settings.py  test_settings_dialog.py
